[package]
name = "patchhive-backend"
version = "0.1.0"
edition = "2021"
description = "Shared PatchHive suite backend runtime."
repository = "https://github.com/patchhive/patchhive2"

[[bin]]
name = "patchhive-backend"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
